--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="ravi.jpeg" alt="WhatsApp Image">
+        <img src="Ravi.jpeg" alt="WhatsApp Image">
         <div class="image-name">Ravindra Sambherao</div>
         <div class="image-description">A famous grape grower in manori.Mama of Bhavesh Pawar</div>
     </div>
