--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="Ravi.jpeg" alt="WhatsApp Image">
-        <div class="image-name">Ravindra Sambherao</div>
-        <div class="image-description">A famous grape grower in manori.Mama of Bhavesh Pawar</div>
+        <img src="774d2b55-201d-4840-bf68-4926d5737424.jpg" alt="WhatsApp Image">
+        <div class="image-name">Shreyas Sambherao</div>
+        <div class="image-description"></div>
     </div>
 </body>
 </html>
