--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <img src="774d2b55-201d-4840-bf68-4926d5737424.jpg" alt="WhatsApp Image">
         <div class="image-name">Shreyas Sambherao</div>
         <div class="image-description"></div>
+
+        <img src="774d2b55-201d-4840-bf68-4926d5737424.jpg" alt="WhatsApp Image">
+        <div class="image-name">Shreyas Sambherao</div>
+        <div class="image-description"></div>
     </div>
 </body>
 </html>
