--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <div class="image-container">
         <img src="774d2b55-201d-4840-bf68-4926d5737424.jpg" alt="WhatsApp Image">
-        <div class="image-name">Bokad Sambherao</div>
+        <div class="image-name">Shreyas Sambherao</div>
         <div class="image-description"></div>
 
         <img src="37452152-62e3-46ab-9d4a-86a8c7a38dcb.jpg" alt="WhatsApp Image">
